--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2>Profile</h2>
 										
 										<h1>M.Sc. Data Science | M.Sc. Mathematics | B.Sc. Mathematics | B.Ed. Mathematics |</h1> <br />
-										<h3>IBM Data Science Professional Certificate<p>(Six Courses Completed)</p></h3> 
+										<h3>IBM Data Science Professional Certificate</h3> 
 										
 										<p>Data Visualization | Machine Learning | Data Analysis | Mathematics | Statistics | Big Data |</p>
 									</header>
