--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
 												<p>Explore the visual representation of leading factors contributing to road accidents in the State Of Connecticut and the market trends of used car industry using Tableau.</p>
 											</div>
 										</article>
+										<article>
+											<a href="https://github.com/ShebaRachelV/IBM-Capstone-Project" class="image"><img src="images/space.jpg" alt="" /></a>
+											<div class="inner">
+												<h4><a href="https://github.com/ShebaRachelV/IBM-Capstone-Project">SpaceX Falcon9 Landing Prediction</a></h4>
+												<p>Predicting if the Falcon 9 first stage will land successfully or not by creating a machine learning pipeline.</p>
+											</div>
+										</article>
 									</div>
 								</div>
 							</section>
