--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<li><a href="https://www.linkedin.com/in/sheba-r/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ShebaRachelV" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:ms.shebarachel@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.credly.com/earner/earned" class="icon solid fa-certificate"><span class="label">Badges</span></a></li>
 					</ul>
 				</footer>
 			</section>
