--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<h2>Profile</h2>
 										
 										<h1>M.Sc. Data Science | M.Sc. Mathematics | B.Sc. Mathematics | B.Ed. Mathematics |</h1> <br />
-										<h3>IBM Data Science Professional Certificate<a href="https://github.com/ShebaRachelV/Crash-Severity-Prediction">Crash Severity Prediction</a></h3> 
+										<h3>IBM Data Science Professional Certificate<a href="https://www.coursera.org/account/accomplishments/professional-cert/MNS5KQ3A8KDG"></a></h3> 
 										
 										<p>Data Visualization | Machine Learning | Data Analysis | Mathematics | Statistics | Big Data |</p>
 									</header>
